ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: otus-arch-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path:  /otusapp/yuriy-krasilnikov($|/)(.*)
          backend:
            serviceName: otus-arch-service
            servicePort: 9000
